--- a/ex1/index.html
+++ b/ex1/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My test page</title>
+    <title>my test page</title>
 </head>
 <body>
-    <img src="firefox-icon.png" alt="My test image">
+    <h1>There are Snow Man</h1>
+ <img src="images//snow1.png" alt="My test image">
+ <p><h2>At Snow Man,  there are ...</h2></p>
+    
+<ul> 
+  <li>Everyone has his own interests at heart</li>
+  <li>The dance performance is incredible</li>
+  <li>big age difference</li>
+</ul>
+
+<p>They are a group of nine. The oldest is 28 years old and the youngest is 17 years old, making them a group with a wide range of ages. They were originally a group of six, but three joined in 2019.</p>
+<p><h2>please look at</h2></p>
+  <li><a href="https://avex.jp/snowman/">official site</a></li>
+<p></p>
+<li><a href="https://www.youtube.com/channel/UCuFPaemAaMR8R5cHzjy23dQ">youtube</a></li>
+
 </body>
 </html>
