--- a/ex1/index.html
+++ b/ex1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my test page</title>
+    <link rel="stylesheet" href="styles//style.css">
 </head>
 <body>
     <h1>There are Snow Man</h1>
