--- a/ex1/index.html
+++ b/ex1/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>There are Snow Man</h1>
- <img src="images//snow1.png" alt="My test image">
- <p><h2>At Snow Man,  there are ...</h2></p>
+ <img src="images//sno2.png" alt="My test image">
+ <h2><p>At Snow Man,  there are ...</p></h2>
     
 <ul> 
   <li>Everyone has his own interests at heart</li>
@@ -18,10 +18,11 @@
 </ul>
 
 <p>They are a group of nine. The oldest is 28 years old and the youngest is 17 years old, making them a group with a wide range of ages. They were originally a group of six, but three joined in 2019.</p>
-<p><h2>please look at</h2></p>
+<h2><p>please look at</p></h2>
   <li><a href="https://avex.jp/snowman/">official site</a></li>
 <p></p>
 <li><a href="https://www.youtube.com/channel/UCuFPaemAaMR8R5cHzjy23dQ">youtube</a></li>
 
+<script src="scripts/main.js"></script>
 </body>
 </html>
