--- a/ex1/index.html
+++ b/ex1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my test page</title>
     <link rel="stylesheet" href="styles//style.css">
+    <link href="styles/style.css" rel="styles/style.css">
 </head>
 <body>
     <h1>There are Snow Man</h1>
@@ -22,7 +23,7 @@
   <li><a href="https://avex.jp/snowman/">official site</a></li>
 <p></p>
 <li><a href="https://www.youtube.com/channel/UCuFPaemAaMR8R5cHzjy23dQ">youtube</a></li>
-
+<button>Change user</button>
 <script src="scripts/main.js"></script>
 </body>
 </html>
