--- a/ex2/index.html
+++ b/ex2/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 
-<html lang="en-US">
 
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="Eleanor Gaye">
+    <meta name="author" content="Saaya">
     <title>Letter</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="shortcut icon" href="pien.ico" type="image/x-icon">
+    <html lang="en-US">
 </head>
 
 <body>
-    <p class="dates"><strong>Dr. Eleanor Gaye</strong><br />
+    <p class="sender-column"><strong>Dr. Eleanor Gaye</strong><br />
         Awesome Science faculty<br />
-        University of Nihon<br />
-        Tokyo, Setagaya 12345,<br />
-        Japan<br />
+        University of Awesome<br />
+        Boston, CA 99999,<br />
+        USA<br />
         <strong>Tel:</strong> 123-456-7890<br />
         <strong>Email:</strong> no_reply@example.com</p>
 
@@ -100,7 +101,7 @@
     <p>For more of my research, see my <a href="http://example.com" target="_blank"
             title="exotic dance research page">exotic dance research page.</a></p>
 
-    <p>Yours sincerely,<br /><br /><br /><br />
+    <p>Yours sincerely,<br /><br/>
         Dr. Eleanor Gaye</p>
 
     <p>University of Awesome motto: <q cite="Bill S Preston, Esq">Be awesome to each other.</q>
