--- a/ex3/index.html
+++ b/ex3/index.html
@@ -7,7 +7,7 @@
     <title>Birdwatching</title>  
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="shortcut icon" href="images/dove2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/dove2.png" type="image/png">
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
