--- a/ex2/index.html
+++ b/ex2/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="Saaya">
+    <meta name="author" content="Eleanor Gaye">
     <title>Letter</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <link rel="shortcut icon" href="images/pien.ico" type="image/x-icon">
     <html lang="en-US">
 </head>
 
@@ -63,9 +62,9 @@
     <ol>
         <li>Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol
             (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
-        <li>Measuring the effect on performance of funk bassplayers at tempratures exceeding
-            30<sup>o</sup>C (86<sup>o</sup>F), when the audience size exponentially increases
-            (effect of 3 &times; 10<sup>3</sup> &gt; 3 &times; 10<sup>4</sup>.)</li>
+        <li>Measuring the effect on performance of funk bassplayers at temperatures
+            exceeding 30°C (86°F), when the audience size exponentially increases
+            (effect of 3 × 10<sup>3</sup>>3 × 10<sup>4</sup>.)</li>
         <li><abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheet">
                 CSS</abbr> constructs for representing musical scores.</li>
     </ol>
