--- a/ex4/index.html
+++ b/ex4/index.html
@@ -13,7 +13,7 @@
     
     <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. </p>
     
-    <h2><em>Contact information,<em></h2>
+    <h2>Contact information,</h2>
     <ul>
         <li>Email: <a href="mailto:jane@example.com">jane@example.com</a></li>
         <p></p>
